projects/beach/base/ocean/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beach
  labels:
    app: beach
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: beach
  template:
    metadata:
      labels:
        app: beach
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 200m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: island
  labels:
    app: island
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: island
  template:
    metadata:
      labels:
        app: island
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 200m
