projects/beach/base/ocean/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beach
spec:
  selector:
    app: beach
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
