projects/beach/base/ocean/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beach
spec:
  parentRefs:
    - name: global
      namespace: core-global
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: beach
          port: 80
