projects/beach/base/ocean/ciliumnetworkpolicy.yaml
---
# Doc: https://doc.crds.dev/github.com/cilium/cilium/cilium.io/CiliumNetworkPolicy/v2@1.18.2
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: beach
spec:
  endpointSelector:
    matchLabels:
      app: beach
  egress:
    # For DNS lookup.
    # The "ocean" provider uses `Kubespray` version `v2.29.0`, which deploys NodeLocal DNSCache with `hostNetwork: true`,
    #   this means it is not a Cilium-managed endpoint and therefore cannot be matched by `toEndpoints`.
    # Ref: https://github.com/kubernetes-sigs/kubespray/blob/v2.29.0/roles/kubernetes-apps/ansible/templates/nodelocaldns-daemonset.yml.j2#L26
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # For outbound traffic to the outside world.
    - toFQDNs:
        # For `apt` command
        - matchPattern: "*.debian.org"
        # For `pip install` command
        - matchName: "pypi.org"
        - matchPattern: "*.pythonhosted.org"
